[package]
name = "zk-paillier"
version = "0.2.9"
edition = "2018"

authors = [
    "Gary <gary@kzencorp.com>",
    "Morten Dahl <mortendahlcs@gmail.com>",
    "Omer <omer.shlomovits@gmail.com>"
]
keywords = ["paillier", "zero knowledge"]

license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[dependencies]
paillier = { git = "https://github.com/wuyingfengsui/rust-paillier", branch = "old-zeroize" }
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.1"
bit-vec = "0.6"
sha2 = "0.8.0"
digest = "0.8.1"

[dependencies.curv]
git = "https://github.com/wuyingfengsui/curv"
branch = "old-zeroize"
features = ["ec_secp256k1"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "all"
harness = false
